# cpp_starter_23

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  hello.cpp  main.cpp  mise.toml
cmake/: DisableExceptions.cmake  FeatureChecks.cmake
src/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  hello.cpp
